...
        {preview}
      </PreviewWrapper>
      <DetailWrapper
        style={styles.detail}
        onPress={onDetailPress}
        accessible={false}
        testID={testID ? 'detail' : undefined}
      >
        <View style={styles.meta}>
          <Text style={styles.label} numberOfLines={1} testID={testID ? 'label' : undefined}>
            {label}
          </Text>
          <Text style={styles.subtitle} numberOfLines={1} testID={testID ? 'subtitle' : undefined}>
...
